testsuite/tests/rename/should_fail/rnfail042.stderr

rnfail042.hs:5:11: error: [GHC-58805]
    Illegal binding of an existing name: ()

rnfail042.hs:6:10: error: [GHC-58805]
    Illegal binding of an existing name: (,,,)

rnfail042.hs:7:12: error: [GHC-58805]
    Illegal binding of an existing name: []

rnfail042.hs:8:13: error: [GHC-58805]
    Illegal binding of an existing name: :
